# videopoet_replication

./: .gitignore  Makefile  README.md  pyproject.toml
data/: Makefile  check_frames_in_sample.sh  download_videos.sh  ffmpeg_command_check.py  get_youtube_videos.py  process_videos.sh  youtube_download.py
data/configs/: process_webvid.yaml  webvid.yaml  webvid_mini.yaml
data/scripts/: check_video_frames.py  ffmpeg_command_check.py  youtube_download.py
data/src/: dataset_io.py  main.py  parquet_generator.py  shard_generator.py  worker.py
data/urls/: old_cartoons_sample.csv
data/urls/webvid/: results_2M_val.csv  results_2M_val_sample.csv  results_2M_val_time_test.csv
data/video_urls/: old_cartoons_test.json
dataset/: tokenizer_training.py
tokenizer/: tokenizer_training.py  videos.json  youtube_download.py
training/: Makefile  requirements.txt
training/utils/: utils.py
videopoet_dataset/: README.md  pyproject.toml
videopoet_dataset/scripts/: download_videos.sh  video_metadata.py
videopoet_dataset/src/: distributor.py  process_video.py
videopoet_dataset/src/videopoet_dataset/: download.py  main.py
videopoet_dataset/tests/: test_download.py  utils.py
videopoet_dataset/urls/webvid/: README.txt
