[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Matt Zhang", email = "set.stun@gmail.com"},
]
dependencies = [
    "torch>=2.0.0",
    "pytube>=15.0.0",
    "opencv-python>=4.9.0.80",
    "pyjson5>=1.6.5",
    "eva-decord>=0.6.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///Users/matt/Projects/Temp/video2dataset#egg=video2dataset",
]
